<resources>
    <string name="app_name">Падари бой, падари камбағал</string>
    <string name="name_author">Роберт кийосаки</string>
    <string name="progress">18.0%</string>
    <string name="time_audio_book">5 соату 36 дақиқа</string>
    <string name="read">Хондан</string>
    <string name="about">Дар бораи!</string>
    <string name="chapters">Мундариҷа</string>
    <string name="review">Review</string>
    <string name="txtCh_1">Пешгуфтор</string>
    <string name="ch_1">Пешгуфтор</string>
    <string name="txtCh_2">Сарватмандон барои пул кор намекунанд!</string>
    <string name="ch_2">Боби 1</string>
    <string name="txtCh_3">Марде, ки орзӯи сарватманд шуданро мекард</string>
    <string name="ch_3">Гуфтори 2</string>
    <string name="txtCh_4">Сарватмандтарин марди Бобил</string>
    <string name="ch_4">Гуфтори 3</string>
    <string name="txtCh_5">Ҳафт роҳи ҳалли як ҳамёни холӣ</string>
    <string name="ch_5">Гуфтори 4</string>
    <string name="txtCh_6">Қоидаи яккум: Шурӯъ ба пурпул кардани ҳамён</string>
    <string name="ch_6">Гуфтори 5</string>
    <string name="txtCh_7">Қоидаи дуюм: Назорат кардани хароҷот</string>
    <string name="ch_7">Гуфтори 6</string>
    <string name="txtCh_8">Қоидаи сеюм: Сарватро зиёд кардан</string>
    <string name="ch_8">Гуфтори 7</string>
    <string name="txtCh_9">Қоидаи чорум:</string>
    <string name="ch_9">Гуфтори 8</string>
    <string name="txtCh_10">Қоидаи 6: Хонаи худро ба як корхонаи фоидаовар табдил диҳед</string>
    <string name="ch_10">Гуфтори 9</string>
    <string name="txtCh_11">Қоидаи ҳафтум: Қобилияти ба даст оварданро зиёд кунед</string>
    <string name="ch_11">Гуфтори 10</string>
    <string name="txtCh_12">Бо олиҳаи мувафаққият мулоқот кунед</string>
    <string name="ch_12">Гуфтори 11</string>
    <string name="txtCh_13">Панҷ қонуни сарват</string>
    <string name="ch_13">Гуфтори 12</string>
    <string name="txtCh_14">Қарздиҳандаи тиллоии Бобил</string>
    <string name="ch_14">Гуфтори 13</string>
    <string name="txtCh_15">Девори Бобил</string>
    <string name="ch_15">Гуфтори 14</string>
    <string name="txtCh_16">Тоҷири шутурони Бобил</string>
    <string name="ch_16">Гуфтори 15</string>
    <string name="txtCh_17">Сеюмин қонуни тилло</string>
    <string name="ch_17">Гуфтори 16</string>
    <string name="txtCh_18">Қонуни чоруми тилло</string>
    <string name="ch_18">Гуфтори 17</string>
    <string name="txtCh_19">Қарздиҳандаи тиллои Бобил</string>
    <string name="ch_19">Гуфтори 18</string>
    <string name="txtCh_20">Деворҳои Бобил</string>
    <string name="ch_20">Гуфтори 19</string>
    <string name="txtCh_21">Тоҷири шутурбони Бобил</string>
    <string name="ch_21">Гуфтори 20</string>
    <string name="txtCh_22">Чигунагии пардохти қарзҳо ва ҷамъ кардани сармоя</string>
    <string name="ch_22">Гуфтори 21</string>
    <string name="txtCh_23">Сарпарастӣ аз як зани бовафо</string>
    <string name="ch_23">Гуфтори 22</string>
    <string name="txtCh_24">Барномаи пардохти қарзҳо</string>
    <string name="ch_24">Гуфтори 23</string>
    <string name="txtCh_25">Бо 21 тангаи нуқра сарамро боло мегирам...</string>
    <string name="ch_25">Гуфтори 24</string>
    <string name="txtCh_26">Тавсия ба касоне, ки қасди пешрафт доранд...</string>
    <string name="ch_26">Гуфтори 25</string>
    <string name="txtCh_27">Хушиқболтарин марди Бобил</string>
    <string name="ch_27">Гуфтори 26</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>