<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_3"
    tools:context=".RichDadPoorDad">

    <!--Action Bar-->
    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_1">

            <!--Button Back-->
            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:layout_alignParentStart="true"
                app:tint="@color/white" />

            <!--Action Bar-->
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="marquee"
                android:fontFamily="serif"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!--Button Share-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:padding="8dp"
                android:src="@drawable/ic_share"
                app:tint="@color/white" />

        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">


        <RelativeLayout
            android:id="@+id/rlHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--RelativeLayout Info book-->
            <RelativeLayout
                android:id="@+id/rlInfo"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/background_1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp">

                    <!--TextView Title Book-->
                    <TextView
                        android:id="@+id/titleBook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:fontFamily="serif"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <!--TextView name author-->
                    <TextView
                        android:id="@+id/nameAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titleBook"
                        android:layout_marginTop="10dp"
                        android:fontFamily="serif"
                        android:text="@string/name_author"
                        android:textColor="@color/teal_200"
                        android:textStyle="bold" />

                    <!--Rate App-->
                    <LinearLayout
                        android:id="@+id/rateApp"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:layout_below="@id/nameAuthor"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:clickable="true"
                            android:foreground="?selectableItemBackground"
                            android:src="@drawable/ic_rate_1"
                            app:tint="@color/yellow" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:clickable="true"
                            android:foreground="?selectableItemBackground"
                            android:src="@drawable/ic_rate_1"
                            app:tint="@color/yellow" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:clickable="true"
                            android:foreground="?selectableItemBackground"
                            android:src="@drawable/ic_rate_1"
                            app:tint="@color/yellow" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:clickable="true"
                            android:foreground="?selectableItemBackground"
                            android:src="@drawable/ic_rate_1"
                            app:tint="@color/yellow" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:clickable="true"
                            android:foreground="?selectableItemBackground"
                            android:src="@drawable/ic_rate"
                            app:tint="@color/yellow" />

                    </LinearLayout>

                    <!--Progress Bar-->
                    <RelativeLayout
                        android:id="@+id/rlProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_below="@id/rateApp"
                        android:layout_marginTop="10dp">

                        <SeekBar
                            android:id="@+id/progressBar"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:progressTint="@color/black" />

                        <TextView
                            android:id="@+id/TextPlayer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/progressBar"
                            android:text="@string/progress"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <!--Time audio book-->
                    <TextView
                        android:id="@+id/timeAudioBook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rlProgressBar"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/timesnewromanpsmt"
                        android:text="@string/time_audio_book"
                        android:textColor="@color/teal_300" />

                </RelativeLayout>

            </RelativeLayout>

            <!--Button Read book-->
            <androidx.cardview.widget.CardView
                android:id="@+id/btnRead"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_below="@id/rlInfo"
                android:layout_marginStart="50dp"
                android:layout_marginTop="-15dp"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                app:cardBackgroundColor="@color/color_2"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/read"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <!--Button Play book-->
            <androidx.cardview.widget.CardView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/rlInfo"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-15dp"
                android:layout_toEndOf="@id/btnRead"
                app:cardBackgroundColor="@color/color_2"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/btnPlay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:padding="4dp"
                    android:src="@drawable/ic_play"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/btnPause"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:padding="4dp"
                    android:src="@drawable/ic_pause"
                    android:visibility="gone"
                    app:tint="@color/white" />


            </androidx.cardview.widget.CardView>

            <!--Image book-->
            <androidx.cardview.widget.CardView
                android:id="@+id/imageBook"
                android:layout_width="98dp"
                android:layout_height="140dp"
                android:layout_below="@id/rlInfo"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-90dp"
                android:layout_marginEnd="50dp"
                app:cardCornerRadius="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo_book" />

            </androidx.cardview.widget.CardView>

            <!--Button Favourite-->
            <androidx.cardview.widget.CardView
                android:id="@+id/btnFavorite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@id/imageBook"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-15dp"
                android:layout_marginEnd="85dp"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                app:cardBackgroundColor="@color/color_2"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:src="@drawable/ic_favorite"
                    app:tint="@color/white" />

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnFavorite"
                android:layout_marginTop="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>